# agent-salience

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  smoke_test.py
.github/workflows/: ci.yml
docs/: concepts.md  formulas.md  integration.md  release_checklist.md  similarity_extensions.md
examples/: alias_and_idf.py  basic_usage.py
src/agent_salience/: __init__.py  drift.py  explain.py  idf.py  loops.py  scoring.py  stats.py  text.py  thresholds.py  triggers.py
tests/: test_drift.py  test_idf.py  test_loops.py  test_scoring.py  test_stats.py  test_text.py  test_thresholds.py  test_triggers.py
